# pkg

./: configure.ac
libpkg/: Makefile.am  fetch.c  pkg_delete.c
libpkg/core/: Makefile.am  p_array.c  p_array.h  p_hash.c  p_hash.h  p_string.c  p_string.h
libpkg/private/: pkg.h
src/: update.c
tests/: Kyuafile  Makefile.am
tests/lib/: array.c  hash.c  string.c
